--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=OtusAI
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/Maps/BonfireMap.BonfireMap
+GameDefaultMap=/Game/Maps/BonfireMap.BonfireMap
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
